--- a/src/components/Table/style.module.scss
+++ b/src/components/Table/style.module.scss
@@ -11,6 +11,7 @@
         border-radius: 20px;
         box-shadow: 0 0 0 10px #F2906B;
         color: #452F21;
+        margin: 10px 0;
     
         th {
             padding: 10px 8px;
